--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "jade": "~1.11.0",
     "mongoose": "^6.2.3",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
